Fix: cosmetic : center content is slightly too low there is the back button present Fix: the go back link wasn't working properly

--- a/src/components/Signup.less
+++ b/src/components/Signup.less
@@ -113,6 +113,10 @@
     .form-content {
       max-height: 100%;
       flex: 1;
+
+      &.two-actions {
+        margin-top: -73px;
+      }
     }
 
     .ant-input {
